@@ -119,7 +119,7 @@ public class UncachedOggStream implements PhysicalOggStream {
     }
 
     private LogicalOggStream getLogicalStream(int serialNumber) {
-        return logicalStreams.get(new Integer(serialNumber));
+        return logicalStreams.get(Integer.valueOf(serialNumber));
     }
 
     public Collection<LogicalOggStream> getLogicalStreams() {
